@@ -302,8 +302,8 @@ of masking operations.</p>
 there were no mask but instead the alpha channel of the given object
 were multiplied with the mask's resulting mask values.</p>
 
-
-<h2 id="the-mask-image">The 'mask-image' property</h2>
+<h2 id="masking">Mask</h2>
+<h3 id="the-mask-image">The 'mask-image' property</h3>
 
 <table class="propdef">
     <tr>
@@ -378,7 +378,7 @@ div { mask-image: url(tl.png), url(tr.png) }
 </pre>
 </div>
 
-<h2 id="the-mask-repeat">The 'mask-repeat' property</h3>
+<h3 id="the-mask-repeat">The 'mask-repeat' property</h3>
 
 <table class="propdef">
     <tr>
@@ -523,7 +523,7 @@ images”</a> for how 'mask-repeat' interacts with other
 comma-separated mask properties to form each mask image
 layer.
 
-<h2 id="the-mask-attachment">The 'mask-attachment' property</h2>
+<h3 id="the-mask-attachment">The 'mask-attachment' property</h3>
 
 <table class="propdef">
     <tr>
@@ -629,7 +629,7 @@ images”</a> for how 'mask-attachment' interacts with other
 comma-separated mask properties to form each mask image
 layer.
 
-<h2 id="the-mask-position">The 'mask-position' property</h2>
+<h3 id="the-mask-position">The 'mask-position' property</h3>
 
 <table class="propdef">
     <tr>
@@ -816,7 +816,7 @@ images”</a> for how 'mask-position' interacts with other
 comma-separated mask properties to form each mask image
 layer.
 
-<h2 id="the-mask-clip">The 'mask-clip' property</h2>
+<h3 id="the-mask-clip">The 'mask-clip' property</h3>
 
 <table class="propdef">
     <tr>
@@ -878,7 +878,7 @@ images”</a> for how 'mask-clip' interacts with other
 comma-separated mask properties to form each mask image
 layer.
 
-<h2 id="the-mask-origin">The 'mask-origin' property</h2>
+<h3 id="the-mask-origin">The 'mask-origin' property</h3>
 
 <table class="propdef">
     <tr>
@@ -948,7 +948,7 @@ comma-separated mask properties to form each mask image
 layer.
 
 
-<h2 id="the-mask-size">The 'mask-size' property</h3>
+<h3 id="the-mask-size">The 'mask-size' property</h3>
 
 <table class="propdef">
     <tr>
@@ -1164,7 +1164,7 @@ images”</a> for how 'mask-size' interacts with other
 comma-separated mask properties to form each mask image
 layer.
 
-<h2 id="the-mask-type">The 'mask-type' property</h3>
+<h3 id="the-mask-type">The 'mask-type' property</h3>
 
 <table class="propdef">
     <tr>
@@ -1223,7 +1223,7 @@ images”</a> for how 'mask-type' interacts with other
 comma-separated mask properties to form each mask image
 layer.
 
-<h2 id="mask-property">The 'mask' property</h2>
+<h3 id="mask-property">The 'mask' property</h3>
 
 <table class="propdef">
   <tr>
@@ -1337,7 +1337,7 @@ property takes precedence.
 
 <p>An invalid or non-existent mask source is ignored and no masking is applied.
 
-<h2 id="MaskElement">The <span class="element-name">'mask'</span> element</h4>
+<h3 id="MaskElement">The <span class="element-name">'mask'</span> element</h3>
 
 <!--elementsummary mask-->
 
@@ -1491,6 +1491,10 @@ other than 'none', and <a>'mask element'</a>
 elements are available for referencing even when the 'display' property
 on the <a>'mask element'</a> element or any of its ancestors is set to
 <span class="prop-value">none</span>.</p>
+
+<h2>Mask Box Image</h2>
+
+<p class=todo>Add defintion for 'mask-box-image' properties here.</p>
 
 <h2 id="SVGPaintServer">SVG Paint Servers as Mask Sources</h2>
 
