@@ -149,38 +149,44 @@
       values</a>
     </ul>
 
-   <li><a href="#the-mask-image"><span class=secno>6. </span>The ‘<code
-    class=property>mask-image</code>’ property</a>
+   <li><a href="#masking"><span class=secno>6. </span>Mask</a>
+    <ul class=toc>
+     <li><a href="#the-mask-image"><span class=secno>6.1. </span>The ‘<code
+      class=property>mask-image</code>’ property</a>
 
-   <li><a href="#the-mask-repeat"><span class=secno>7. </span>The ‘<code
-    class=property>mask-repeat</code>’ property </a>
+     <li><a href="#the-mask-repeat"><span class=secno>6.2. </span>The
+      ‘<code class=property>mask-repeat</code>’ property</a>
 
-   <li><a href="#the-mask-attachment"><span class=secno>8. </span>The
-    ‘<code class=property>mask-attachment</code>’ property</a>
+     <li><a href="#the-mask-attachment"><span class=secno>6.3. </span>The
+      ‘<code class=property>mask-attachment</code>’ property</a>
 
-   <li><a href="#the-mask-position"><span class=secno>9. </span>The ‘<code
-    class=property>mask-position</code>’ property</a>
+     <li><a href="#the-mask-position"><span class=secno>6.4. </span>The
+      ‘<code class=property>mask-position</code>’ property</a>
 
-   <li><a href="#the-mask-clip"><span class=secno>10. </span>The ‘<code
-    class=property>mask-clip</code>’ property</a>
+     <li><a href="#the-mask-clip"><span class=secno>6.5. </span>The ‘<code
+      class=property>mask-clip</code>’ property</a>
 
-   <li><a href="#the-mask-origin"><span class=secno>11. </span>The ‘<code
-    class=property>mask-origin</code>’ property</a>
+     <li><a href="#the-mask-origin"><span class=secno>6.6. </span>The
+      ‘<code class=property>mask-origin</code>’ property</a>
 
-   <li><a href="#the-mask-size"><span class=secno>12. </span>The ‘<code
-    class=property>mask-size</code>’ property </a>
+     <li><a href="#the-mask-size"><span class=secno>6.7. </span>The ‘<code
+      class=property>mask-size</code>’ property</a>
 
-   <li><a href="#the-mask-type"><span class=secno>13. </span>The ‘<code
-    class=property>mask-type</code>’ property </a>
+     <li><a href="#the-mask-type"><span class=secno>6.8. </span>The ‘<code
+      class=property>mask-type</code>’ property</a>
 
-   <li><a href="#mask-property"><span class=secno>14. </span>The ‘<code
-    class=property>mask</code>’ property</a>
+     <li><a href="#mask-property"><span class=secno>6.9. </span>The ‘<code
+      class=property>mask</code>’ property</a>
 
-   <li><a href="#MaskElement"><span class=secno>15. </span>The <span
-    class=element-name>‘<code class=property>mask</code>’</span> element
-    </a>
+     <li><a href="#MaskElement"><span class=secno>6.10. </span>The <span
+      class=element-name>‘<code class=property>mask</code>’</span>
+      element</a>
+    </ul>
 
-   <li><a href="#SVGPaintServer"><span class=secno>16. </span>SVG Paint
+   <li><a href="#mask-box-image"><span class=secno>7. </span>Mask Box
+    Image</a>
+
+   <li><a href="#SVGPaintServer"><span class=secno>8. </span>SVG Paint
     Servers as Mask Sources</a>
 
    <li class=no-num><a href="#references"> References</a>
@@ -476,8 +482,10 @@ mask-repeat: no-repeat<strong>, no-repeat, no-repeat</strong>;
    were no mask but instead the alpha channel of the given object were
    multiplied with the mask's resulting mask values.
 
-  <h2 id=the-mask-image><span class=secno>6. </span>The ‘<a
-   href="#mask-image"><code class=property>mask-image</code></a>’ property</h2>
+  <h2 id=masking><span class=secno>6. </span>Mask</h2>
+
+  <h3 id=the-mask-image><span class=secno>6.1. </span>The ‘<a
+   href="#mask-image"><code class=property>mask-image</code></a>’ property</h3>
 
   <table class=propdef>
    <tbody>
@@ -577,9 +585,9 @@ div { mask-image: url(tl.png), url(tr.png) }
 </pre>
   </div>
 
-  <h2 id=the-mask-repeat><span class=secno>7. </span>The ‘<a
+  <h3 id=the-mask-repeat><span class=secno>6.2. </span>The ‘<a
    href="#mask-repeat"><code class=property>mask-repeat</code></a>’
-   property</h2>
+   property</h3>
 
   <table class=propdef>
    <tbody>
@@ -762,9 +770,9 @@ body {
    class=property>mask-repeat</code></a>’ interacts with other
    comma-separated mask properties to form each mask image layer.
 
-  <h2 id=the-mask-attachment><span class=secno>8. </span>The ‘<a
+  <h3 id=the-mask-attachment><span class=secno>6.3. </span>The ‘<a
    href="#mask-attachment"><code class=property>mask-attachment</code></a>’
-   property</h2>
+   property</h3>
 
   <table class=propdef>
    <tbody>
@@ -907,9 +915,9 @@ h1 {
    class=property>mask-attachment</code></a>’ interacts with other
    comma-separated mask properties to form each mask image layer.
 
-  <h2 id=the-mask-position><span class=secno>9. </span>The ‘<a
+  <h3 id=the-mask-position><span class=secno>6.4. </span>The ‘<a
    href="#mask-position"><code class=property>mask-position</code></a>’
-   property</h2>
+   property</h3>
 
   <table class=propdef>
    <tbody>
@@ -1141,8 +1149,8 @@ body {
    class=property>mask-position</code></a>’ interacts with other
    comma-separated mask properties to form each mask image layer.
 
-  <h2 id=the-mask-clip><span class=secno>10. </span>The ‘<a
-   href="#mask-clip"><code class=property>mask-clip</code></a>’ property</h2>
+  <h3 id=the-mask-clip><span class=secno>6.5. </span>The ‘<a
+   href="#mask-clip"><code class=property>mask-clip</code></a>’ property</h3>
 
   <table class=propdef>
    <tbody>
@@ -1233,9 +1241,9 @@ body {
    class=property>mask-clip</code></a>’ interacts with other
    comma-separated mask properties to form each mask image layer.
 
-  <h2 id=the-mask-origin><span class=secno>11. </span>The ‘<a
+  <h3 id=the-mask-origin><span class=secno>6.6. </span>The ‘<a
    href="#mask-origin"><code class=property>mask-origin</code></a>’
-   property</h2>
+   property</h3>
 
   <table class=propdef>
    <tbody>
@@ -1342,8 +1350,8 @@ body {
    class=property>mask-origin</code></a>’ interacts with other
    comma-separated mask properties to form each mask image layer.
 
-  <h2 id=the-mask-size><span class=secno>12. </span>The ‘<a
-   href="#mask-size"><code class=property>mask-size</code></a>’ property</h2>
+  <h3 id=the-mask-size><span class=secno>6.7. </span>The ‘<a
+   href="#mask-size"><code class=property>mask-size</code></a>’ property</h3>
 
   <table class=propdef>
    <tbody>
@@ -1585,8 +1593,8 @@ div {
    class=property>mask-size</code></a>’ interacts with other
    comma-separated mask properties to form each mask image layer.
 
-  <h2 id=the-mask-type><span class=secno>13. </span>The ‘<a
-   href="#mask-type"><code class=property>mask-type</code></a>’ property</h2>
+  <h3 id=the-mask-type><span class=secno>6.8. </span>The ‘<a
+   href="#mask-type"><code class=property>mask-type</code></a>’ property</h3>
 
   <table class=propdef>
    <tbody>
@@ -1676,8 +1684,8 @@ div {
    class=property>mask-type</code></a>’ interacts with other
    comma-separated mask properties to form each mask image layer.
 
-  <h2 id=mask-property><span class=secno>14. </span>The ‘<a
-   href="#mask"><code class=property>mask</code></a>’ property</h2>
+  <h3 id=mask-property><span class=secno>6.9. </span>The ‘<a
+   href="#mask"><code class=property>mask</code></a>’ property</h3>
 
   <table class=propdef>
    <tbody>
@@ -1833,8 +1841,8 @@ div {
   <p>An invalid or non-existent mask source is ignored and no masking is
    applied.
 
-  <h2 id=MaskElement><span class=secno>15. </span>The <a class=element-name
-   href="#mask">‘<code class=property>mask</code>’</a> element</h2>
+  <h3 id=MaskElement><span class=secno>6.10. </span>The <a class=element-name
+   href="#mask">‘<code class=property>mask</code>’</a> element</h3>
 
   <table class=propdef summary="mask element">
    <tbody>
@@ -2371,8 +2379,13 @@ div {
    class=property>mask</code>’</a> element or any of its ancestors is set
    to <a class=prop-value href="#none">none</a>.</p>
 
-  <h2 id=SVGPaintServer><span class=secno>16. </span>SVG Paint Servers as
-   Mask Sources</h2>
+  <h2 id=mask-box-image><span class=secno>7. </span>Mask Box Image</h2>
+
+  <p class=todo>Add defintion for ‘<code
+   class=property>mask-box-image</code>’ properties here.</p>
+
+  <h2 id=SVGPaintServer><span class=secno>8. </span>SVG Paint Servers as Mask
+   Sources</h2>
 
   <p> Besides an SVG <a class=element-name href=MaskElement>‘<code
    class=property>mask</code>’</a> element, the ‘<a href="#mask"><code
@@ -2530,83 +2543,84 @@ div {
 
   <ul class=indexlist>
    <li>‘<a href="#alpha"><code class=css>alpha</code></a>’, <a
-    href="#alpha" title="''alpha''"><strong>13.</strong></a>
+    href="#alpha" title="''alpha''"><strong>6.8.</strong></a>
 
    <li><a href="#ltattachmentgt"><var>&lt;attachment&gt;</var></a>, <a
-    href="#ltattachmentgt" title="&lt;attachment&gt;"><strong>8.</strong></a>
-    
+    href="#ltattachmentgt"
+    title="&lt;attachment&gt;"><strong>6.3.</strong></a>
 
    <li>‘<a href="#auto0"><code class=css>auto</code></a>’, <a
-    href="#auto0" title="''auto''"><strong>13.</strong></a>
+    href="#auto0" title="''auto''"><strong>6.8.</strong></a>
     <ul>
      <li>‘<a href="#mask-size"><code class=property>mask-size</code></a>’
       value, <a href="#auto"
-      title="''auto'', 'mask-size' value"><strong>12.</strong></a>
+      title="''auto'', 'mask-size' value"><strong>6.7.</strong></a>
     </ul>
 
    <li>‘<code class=css>border-box</code>’
     <ul>
      <li>‘<a href="#mask-clip"><code class=property>mask-clip</code></a>’
       value, <a href="#border-box"
-      title="''border-box'', 'mask-clip' value"><strong>10.</strong></a>
+      title="''border-box'', 'mask-clip' value"><strong>6.5.</strong></a>
 
      <li>‘<a href="#mask-origin"><code
       class=property>mask-origin</code></a>’ value, <a href="#border-box0"
-      title="''border-box'', 'mask-origin' value"><strong>11.</strong></a>
+      title="''border-box'', 'mask-origin' value"><strong>6.6.</strong></a>
     </ul>
 
    <li>‘<code class=css>bottom</code>’
     <ul>
      <li>‘<a href="#mask-position"><code
       class=property>mask-position</code></a>’ value, <a href="#bottom"
-      title="''bottom'', 'mask-position' value"><strong>9.</strong></a>
+      title="''bottom'', 'mask-position' value"><strong>6.4.</strong></a>
     </ul>
 
    <li>bounding client rect, <a href="#bounding-client-rect"
     title="bounding client rect"><strong>4.</strong></a>
 
    <li><a href="#ltboxgt"><var>&lt;box&gt;</var></a>, <a href="#ltboxgt"
-    title="&lt;box&gt;"><strong>10.</strong></a>
+    title="&lt;box&gt;"><strong>6.5.</strong></a>
 
    <li>‘<code class=css>center</code>’
     <ul>
      <li>‘<a href="#mask-position"><code
       class=property>mask-position</code></a>’ value, <a href="#center"
-      title="''center'', 'mask-position' value"><strong>9.</strong></a>
+      title="''center'', 'mask-position' value"><strong>6.4.</strong></a>
     </ul>
 
    <li>‘<a href="#child"><code class=css>child</code></a>’, <a
-    href="#child" title="''child''"><strong>14.</strong></a>
+    href="#child" title="''child''"><strong>6.9.</strong></a>
 
    <li>&lt;child-selector&gt;, <a href="#ltchild-selectorgt"
-    title="&lt;child-selector&gt;"><strong>14.</strong></a>, <a
+    title="&lt;child-selector&gt;"><strong>6.9.</strong></a>, <a
     href="#ltchild-selectorgt0"
-    title="&lt;child-selector&gt;"><strong>14.</strong></a>
+    title="&lt;child-selector&gt;"><strong>6.9.</strong></a>
 
    <li>&lt;compound-selector&gt;, <a href="#ltcompound-selectorgt"
-    title="&lt;compound-selector&gt;"><strong>14.</strong></a>
+    title="&lt;compound-selector&gt;"><strong>6.9.</strong></a>
 
    <li>‘<a href="#contain"><code class=css>contain</code></a>’, <a
-    href="#contain" title="''contain''"><strong>12.</strong></a>
+    href="#contain" title="''contain''"><strong>6.7.</strong></a>
 
    <li>‘<a href="#content-box0"><code class=css>content-box</code></a>’,
-    <a href="#content-box0" title="''content-box''"><strong>11.</strong></a>
+    <a href="#content-box0" title="''content-box''"><strong>6.6.</strong></a>
+    
     <ul>
      <li>‘<a href="#mask-clip"><code class=property>mask-clip</code></a>’
       value, <a href="#content-box"
-      title="''content-box'', 'mask-clip' value"><strong>10.</strong></a>
+      title="''content-box'', 'mask-clip' value"><strong>6.5.</strong></a>
     </ul>
 
    <li>‘<a href="#cover"><code class=css>cover</code></a>’, <a
-    href="#cover" title="''cover''"><strong>12.</strong></a>
+    href="#cover" title="''cover''"><strong>6.7.</strong></a>
 
-   <li>fixed, <a href="#fixed0" title=fixed><strong>8.</strong></a>
+   <li>fixed, <a href="#fixed0" title=fixed><strong>6.3.</strong></a>
 
    <li>‘<a href="#fixed0"><code class=css>fixed</code></a>’, <a
-    href="#fixed" title="''fixed''"><strong>8.</strong></a>
+    href="#fixed" title="''fixed''"><strong>6.3.</strong></a>
 
    <li>&lt;image&gt;, <a href="#ltimagegt"
-    title="&lt;image&gt;"><strong>6.</strong></a>
+    title="&lt;image&gt;"><strong>6.1.</strong></a>
 
    <li>layers, <a href="#layers" title=layers>5.1.</a>
 
@@ -2614,91 +2628,93 @@ div {
     <ul>
      <li>‘<a href="#mask-position"><code
       class=property>mask-position</code></a>’ value, <a href="#left"
-      title="''left'', 'mask-position' value"><strong>9.</strong></a>
+      title="''left'', 'mask-position' value"><strong>6.4.</strong></a>
     </ul>
 
-   <li>local, <a href="#local0" title=local><strong>8.</strong></a>
+   <li>local, <a href="#local0" title=local><strong>6.3.</strong></a>
 
    <li>‘<a href="#local0"><code class=css>local</code></a>’, <a
-    href="#local" title="''local''"><strong>8.</strong></a>
+    href="#local" title="''local''"><strong>6.3.</strong></a>
 
    <li>local coordinate system, <a href="#local-coordinate-system"
     title="local coordinate system"><strong>4.</strong></a>
 
    <li>‘<a href="#luminance"><code class=css>luminance</code></a>’, <a
-    href="#luminance" title="''luminance''"><strong>13.</strong></a>
+    href="#luminance" title="''luminance''"><strong>6.8.</strong></a>
 
-   <li>mask, <a href="#MaskProperty" title=mask><strong>14.</strong></a>, <a
-    href="#mask" title=mask><strong>15.</strong></a>, <a href="#mask0"
+   <li>mask, <a href="#MaskProperty" title=mask><strong>6.9.</strong></a>, <a
+    href="#mask" title=mask><strong>6.10.</strong></a>, <a href="#mask0"
     title=mask><strong>4.</strong></a>, <a href="#mask1" title=mask>5.1.</a>
 
    <li>mask-attachment, <a href="#mask-attachment"
-    title=mask-attachment><strong>8.</strong></a>
+    title=mask-attachment><strong>6.3.</strong></a>
 
    <li>mask-clip, <a href="#mask-clip"
-    title=mask-clip><strong>10.</strong></a>
+    title=mask-clip><strong>6.5.</strong></a>
 
    <li>&lt;mask-image&gt;, <a href="#ltmask-imagegt"
-    title="&lt;mask-image&gt;"><strong>6.</strong></a>
+    title="&lt;mask-image&gt;"><strong>6.1.</strong></a>
 
    <li>mask-image, <a href="#mask-image"
-    title=mask-image><strong>6.</strong></a>
+    title=mask-image><strong>6.1.</strong></a>
 
    <li>&lt;mask-layer&gt;, <a href="#ltmask-layergt"
-    title="&lt;mask-layer&gt;"><strong>14.</strong></a>
+    title="&lt;mask-layer&gt;"><strong>6.9.</strong></a>
 
    <li>mask-origin, <a href="#mask-origin"
-    title=mask-origin><strong>11.</strong></a>
+    title=mask-origin><strong>6.6.</strong></a>
 
    <li>mask painting area, <a href="#mask-painting-area"
-    title="mask painting area"><strong>10.</strong></a>, <a
-    href="#mask-painting-area." title="mask painting area.">7.</a>, <a
-    href="#mask-painting-area0" title="mask painting area">7.</a>, <a
-    href="#mask-painting-area1" title="mask painting area">7.</a>, <a
-    href="#mask-painting-area2" title="mask painting area">7.</a>, <a
-    href="#mask-painting-area3" title="mask painting area">7.</a>, <a
-    href="#mask-painting-area4" title="mask painting area">7.</a>, <a
-    href="#mask-painting-area5" title="mask painting area">8.</a>, <a
-    href="#mask-painting-area6" title="mask painting area">9.</a>, <a
-    href="#mask-painting-area7" title="mask painting area">9.</a>, <a
-    href="#mask-painting-area8" title="mask painting area">9.</a>
+    title="mask painting area"><strong>6.5.</strong></a>, <a
+    href="#mask-painting-area." title="mask painting area.">6.2.</a>, <a
+    href="#mask-painting-area0" title="mask painting area">6.2.</a>, <a
+    href="#mask-painting-area1" title="mask painting area">6.2.</a>, <a
+    href="#mask-painting-area2" title="mask painting area">6.2.</a>, <a
+    href="#mask-painting-area3" title="mask painting area">6.2.</a>, <a
+    href="#mask-painting-area4" title="mask painting area">6.2.</a>, <a
+    href="#mask-painting-area5" title="mask painting area">6.3.</a>, <a
+    href="#mask-painting-area6" title="mask painting area">6.4.</a>, <a
+    href="#mask-painting-area7" title="mask painting area">6.4.</a>, <a
+    href="#mask-painting-area8" title="mask painting area">6.4.</a>
 
    <li>mask-position, <a href="#mask-position"
-    title=mask-position><strong>9.</strong></a>
+    title=mask-position><strong>6.4.</strong></a>
 
    <li>mask positioning area, <a href="#mask-positioning-area"
-    title="mask positioning area"><strong>11.</strong></a>, <a
-    href="#mask-positioning-area." title="mask positioning area.">12.</a>
+    title="mask positioning area"><strong>6.6.</strong></a>, <a
+    href="#mask-positioning-area." title="mask positioning area.">6.7.</a>
 
    <li>mask-repeat, <a href="#mask-repeat"
-    title=mask-repeat><strong>7.</strong></a>
+    title=mask-repeat><strong>6.2.</strong></a>
 
    <li><a href="#ltmask-sizegt"><var>&lt;mask-size&gt;</var></a>, <a
-    href="#ltmask-sizegt" title="&lt;mask-size&gt;"><strong>12.</strong></a>
+    href="#ltmask-sizegt" title="&lt;mask-size&gt;"><strong>6.7.</strong></a>
+    
 
    <li>mask-size, <a href="#mask-size"
-    title=mask-size><strong>12.</strong></a>
+    title=mask-size><strong>6.7.</strong></a>
 
    <li>&lt;mask-source&gt;, <a href="#ltmask-sourcegt"
-    title="&lt;mask-source&gt;"><strong>14.</strong></a>
+    title="&lt;mask-source&gt;"><strong>6.9.</strong></a>
 
    <li>mask source, <a href="#mask-source"
     title="mask source"><strong>4.</strong></a>
 
    <li><a href="#ltmask-typegt"><var>&lt;mask-type&gt;</var></a>, <a
-    href="#ltmask-typegt" title="&lt;mask-type&gt;"><strong>13.</strong></a>
+    href="#ltmask-typegt" title="&lt;mask-type&gt;"><strong>6.8.</strong></a>
+    
 
    <li>mask-type, <a href="#mask-type"
-    title=mask-type><strong>13.</strong></a>
+    title=mask-type><strong>6.8.</strong></a>
 
    <li>‘<a href="#none"><code class=css>none</code></a>’, <a href="#none"
-    title="''none''"><strong>6.</strong></a>
+    title="''none''"><strong>6.1.</strong></a>
 
    <li>‘<code class=css>no-repeat</code>’
     <ul>
      <li>‘<a href="#mask-repeat"><code
       class=property>mask-repeat</code></a>’ value, <a href="#no-repeat"
-      title="''no-repeat'', 'mask-repeat' value"><strong>7.</strong></a>
+      title="''no-repeat'', 'mask-repeat' value"><strong>6.2.</strong></a>
     </ul>
 
    <li>object bounding box units, <a href="#object-bounding-box-units"
@@ -2708,70 +2724,70 @@ div {
     <ul>
      <li>‘<a href="#mask-clip"><code class=property>mask-clip</code></a>’
       value, <a href="#padding-box"
-      title="''padding-box'', 'mask-clip' value"><strong>10.</strong></a>
+      title="''padding-box'', 'mask-clip' value"><strong>6.5.</strong></a>
 
      <li>‘<a href="#mask-origin"><code
       class=property>mask-origin</code></a>’ value, <a href="#padding-box0"
-      title="''padding-box'', 'mask-origin' value"><strong>11.</strong></a>
+      title="''padding-box'', 'mask-origin' value"><strong>6.6.</strong></a>
     </ul>
 
    <li><a href="#ltpositiongt"><var>&lt;position&gt;</var></a>, <a
-    href="#ltpositiongt" title="&lt;position&gt;"><strong>9.</strong></a>
+    href="#ltpositiongt" title="&lt;position&gt;"><strong>6.4.</strong></a>
 
    <li>‘<code class=css>repeat</code>’
     <ul>
      <li>‘<a href="#mask-repeat"><code
       class=property>mask-repeat</code></a>’ value, <a href="#repeat"
-      title="''repeat'', 'mask-repeat' value"><strong>7.</strong></a>
+      title="''repeat'', 'mask-repeat' value"><strong>6.2.</strong></a>
     </ul>
 
    <li><a href="#ltrepeat-stylegt"><var>&lt;repeat-style&gt;</var></a>, <a
     href="#ltrepeat-stylegt"
-    title="&lt;repeat-style&gt;"><strong>7.</strong></a>
+    title="&lt;repeat-style&gt;"><strong>6.2.</strong></a>
 
    <li>‘<a href="#repeat-x"><code class=css>repeat-x</code></a>’, <a
-    href="#repeat-x" title="''repeat-x''"><strong>7.</strong></a>
+    href="#repeat-x" title="''repeat-x''"><strong>6.2.</strong></a>
 
    <li>‘<a href="#repeat-y"><code class=css>repeat-y</code></a>’, <a
-    href="#repeat-y" title="''repeat-y''"><strong>7.</strong></a>
+    href="#repeat-y" title="''repeat-y''"><strong>6.2.</strong></a>
 
    <li>‘<code class=css>right</code>’
     <ul>
      <li>‘<a href="#mask-position"><code
       class=property>mask-position</code></a>’ value, <a href="#right"
-      title="''right'', 'mask-position' value"><strong>9.</strong></a>
+      title="''right'', 'mask-position' value"><strong>6.4.</strong></a>
     </ul>
 
    <li>‘<code class=css>round</code>’
     <ul>
      <li>‘<a href="#mask-repeat"><code
       class=property>mask-repeat</code></a>’ value, <a href="#round"
-      title="''round'', 'mask-repeat' value"><strong>7.</strong></a>
+      title="''round'', 'mask-repeat' value"><strong>6.2.</strong></a>
     </ul>
 
-   <li>scroll, <a href="#scroll0" title=scroll><strong>8.</strong></a>
+   <li>scroll, <a href="#scroll0" title=scroll><strong>6.3.</strong></a>
 
    <li>‘<a href="#scroll0"><code class=css>scroll</code></a>’, <a
-    href="#scroll" title="''scroll''"><strong>8.</strong></a>
+    href="#scroll" title="''scroll''"><strong>6.3.</strong></a>
 
    <li>‘<code class=css>space</code>’
     <ul>
      <li>‘<a href="#mask-repeat"><code
       class=property>mask-repeat</code></a>’ value, <a href="#space"
-      title="''space'', 'mask-repeat' value"><strong>7.</strong></a>
+      title="''space'', 'mask-repeat' value"><strong>6.2.</strong></a>
     </ul>
 
    <li>‘<code class=css>top</code>’
     <ul>
      <li>‘<a href="#mask-position"><code
       class=property>mask-position</code></a>’ value, <a href="#top"
-      title="''top'', 'mask-position' value"><strong>9.</strong></a>
+      title="''top'', 'mask-position' value"><strong>6.4.</strong></a>
     </ul>
 
    <li>user coordinate system, <a href="#user-coordinate-system"
     title="user coordinate system"><strong>4.</strong></a>
 
-   <li>viewport, <a href="#viewport" title=viewport>8.</a>
+   <li>viewport, <a href="#viewport" title=viewport>6.3.</a>
   </ul>
   <!--end-index-->
 
