@@ -1,4 +1,7 @@
 2012-08-12 dschulze@adobe.com
+	Created new sections for Mask and Mask Box Image.
+
+2012-08-12 dschulze@adobe.com
 	Added more images.
 
 2012-08-12 dschulze@adobe.com
